# -c-

./: CMakeLists.txt  README.md  layer.cpp  layer.h  load_data.cpp  load_data.h  main.cpp  network.cpp  network.h  train.txt  utils.cpp  utils.h  utils_other.h
